# kakeibo-analytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: balance.py  chat.py  config.py  file_upload.py  fixed_variable_cost.py  food_analysis.py  home.py  main.py  s3_utils.py  util.py
docs/: S3フォルダ仕様.md  アーキテクチャ.drawio  マネーフォワードの家計簿データのCSVファイル仕様.md  固定費と変動費の分類.md  家計簿データのカテゴリについて.md
