[tool.poetry]
name = "kakeibo-analytics"
version = "0.1.0"
description = ""
authors = ["Masato Hamasaki <hamasato48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.43.2"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
