[tool.poetry]
name = "kakeibo-analytics"
version = "0.1.0"
description = ""
authors = ["Masato Hamasaki <hamasato48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.45.0"
matplotlib = "^3.10.1"
s3fs = "^2025.3.2"
python-dotenv = "^1.1.0"
japanize-matplotlib = "^1.1.3"
authlib = ">=1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
